# LifeGame

./: CMakeLists.txt  LifeGame.sln
LifeGame/: Application.cpp  Application.h  Command.h  CommandHistory.cpp  CommandHistory.h  FileManager.cpp  FileManager.h  Game.cpp  Game.h  HelpWindow.cpp  HelpWindow.h  LifeGame.vcxproj  LifeGame.vcxproj.filters  Main.cpp  PatternLibrary.cpp  PatternLibrary.h  PatternPreview.cpp  PatternPreview.h  PlacePatternCommand.cpp  PlacePatternCommand.h  Renderer.cpp  Renderer.h  Resource.h  RuleEngine.cpp  RuleEngine.h  SetCellCommand.cpp  SetCellCommand.h  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SplashWindow.cpp  SplashWindow.h  Statistics.cpp  Statistics.h  UI.cpp  UI.h
